# project_elmo_backend

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  redis.conf
.github/workflow/: action.yml
.github/workflows/: action.yml
api/history/: history.py
api/home/: home.py
api/inference/: inference.py
api/setting/: setting.py
api/training/: training.py
app/: server.py
app/history/schemas/: history.py
app/history/services/: history.py
app/inference/: inference.py
app/inference/models/: __init__.py  message.py  test.py
app/inference/schemas/: inference.py
app/inference/services/: inference.py
app/setting/models/: setting.py
app/setting/schemas/: setting.py
app/setting/services/: setting.py
app/training/download/: download.py  (+2 more)
core/: config.py
core/utils/: file_util.py
docker/api/: Dockerfile  startup.sh
migrations/: env.py
migrations/versions/: 068ed2c7468d_add_pdf_related_columns_for_message_.py  168234a996ab_update_size_of_pretrained_model_.py  3839baa07e37_update_table_name.py  3a24a085d59b_modify_user_table.py  4cc02da8d099_add_columns_to_message_table.py  543bef763e4d_add_train_loss_and_runtime_property_for_.py  548b06e68306_update_task_type.py  682a279465bb_add_train_loss_and_task_property_for_.py  6c8134aef069_add_missing_column_of_finetuningmodel.py  83141d1d50ff_add task column to finetuning_model.py  b0a1bc00c080_add_setting_table.py  e4e34deaa93a_add_new_tables.py  e96512344a4c_add_message_and_test_table.py  ea146646c535_add_new_tables_and_modify_user.py  eea5902b0e33_fix_error_modify_columns.py  f0f5f640ba3f_add_new_columns_in_trainint_parameter_.py  faef5ed72a73_add_uuid_to_training_session.py
(+17 files in other folders)
