[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "FastAPI Boilerplate"
authors = ["Hide <padocon@naver.com>"]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.3"
pydantic-settings = "^2.0.3"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.20"}
huggingface_hub = "^0.16.4"
transformers = "^4.31.0"
torch = "2.0.0"
PyJWT = "^2.8.0"
uvicorn = "^0.23.2"
fastapi = "^0.101.1"
celery = "^5.2.7"
gunicorn = "^21.2.0"
fastapi-event = "^0.1.3"
pythondi = "^1.2.4"
ujson = "^5.4.0"
aiomysql = "^0.2.0"
click = "^8.1.3"
greenlet = "1.1.3"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
